--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -121,6 +121,7 @@
         "challenges": "Проблемы и преимущества",
         "contacts": "Контакты",
         "tasks": "Задачи",
+        "approvals": "Согласования",
         "adminPanel": "Панель администратора"
     },
     "calendar": {
@@ -232,8 +233,45 @@
         "by": ""
     },
     "userRoles": {
-        "admin": "Администратор",
-        "user": "Пользователь"
+        "viewer": "Наблюдатель",
+        "user": "Пользователь",
+        "approver": "Согласующий",
+        "finance": "Финансовый контролер",
+        "manager": "Менеджер",
+        "admin": "Администратор"
+    },
+    "approvals": {
+        "title": "Рабочие процессы согласования",
+        "subtitle": "Отслеживайте ожидающие решения по регистрациям, финансовым операциям и задачам.",
+        "refresh": "Обновить",
+        "emptyState": "Нет ожидающих согласований.",
+        "status": {
+            "pending": "В ожидании",
+            "waiting": "В очереди",
+            "approved": "Одобрено",
+            "rejected": "Отклонено",
+            "skipped": "Пропущено"
+        },
+        "step": {
+            "escalation": "Эскалация",
+            "noAssignees": "Нет назначенных пользователей.",
+            "noPermission": "У вас нет прав для этого шага.",
+            "commentPlaceholder": "Добавьте необязательный комментарий к решению",
+            "commentShow": "Добавить комментарий",
+            "commentHide": "Скрыть комментарий",
+            "decisionFailed": "Не удалось сохранить решение. Попробуйте ещё раз.",
+            "actions": {
+                "approve": "Одобрить",
+                "reject": "Отклонить"
+            },
+            "sla": {
+                "remaining": "Осталось: {time}",
+                "overdue": "Просрочено: {time}",
+                "due": "Срок: {time}",
+                "none": "Срок не задан."
+            },
+            "actor": "{name} • {timestamp}"
+        }
     },
     "dataTypes": {
         "schedule": "Событие календаря",
